--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "router": "^1.3.7",
     "sass": "^1.55.0",
     "styled-component": "^2.8.0",
+    "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
