--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "homepage": "https://miseon920.github.io/",
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
     "@fullpage/react-fullpage": "^0.1.28",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-pdf": "^5.7.2",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
