--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
+    "gasp": "^0.0.2",
+    "gsap": "^3.11.3",
+    "gsap-plugin": "^5.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -21,6 +24,7 @@
     "redux": "^4.2.0",
     "router": "^1.3.7",
     "sass": "^1.55.0",
+    "split.js": "^1.6.5",
     "styled-component": "^2.8.0",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
